data/derived/comb/progs/unify/prog7065.ml.out
Characters 182-186:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type 'c list list list list
       Type 'a * 'b is not compatible with type 'c list list list 
